--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
   <meta charset="utf-8">
+  <script src="//cdn.polyfill.io/v2/polyfill.min.js"></script>
   <title>Frontend Boilerplate with React and TypeScript</title>
-  <link href="./build/styles.css" rel="stylesheet">
+  <link href="/assets/2.ab37156d28c663f74cf8.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="text/javascript" src="./build/bundle.js"></script>
-  <script type="text/javascript" src="./build/dbf63840ccc5d4da4166.js"></script>
-  <script type="text/javascript" src="./build/92402b7e605b2d089f02.js"></script>
+  <script src="/assets/bundle.js"></script>
+  <script src="/assets/372c74354e782addc4cc.js"></script>
+  <script src="/assets/33affb57cbfd39f21ed6.js"></script>
 </body>
 
 </html>
