--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!doctype html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <script src="//cdn.polyfill.io/v2/polyfill.min.js"></script>
-  <title>Frontend Boilerplate with React and TypeScript</title>
-  <link href="/assets/2.ab37156d28c663f74cf8.css" rel="stylesheet">
-</head>
-
-<body>
-  <div id="root"></div>
-  <script src="/assets/bundle.js"></script>
-  <script src="/assets/372c74354e782addc4cc.js"></script>
-  <script src="/assets/33affb57cbfd39f21ed6.js"></script>
-</body>
-
-</html>
+<!doctype html><html><head><meta charset="utf-8"><script src="//cdn.polyfill.io/v2/polyfill.min.js"></script><title>Frontend Boilerplate with React and TypeScript</title><link href="/0.6e50b0939ff204355ce2.css" rel="stylesheet"></head><body><div id="root"></div><script src="/bundle.js"></script><script src="/5bcc0ac29c51021c01e9.js"></script><script src="/47534610d6bd12917f2a.js"></script></body></html>
